--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,29 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django = "^5.1.3"
+django = "4.2"
 psycopg2-binary = "^2.9.10"
+djangorestframework = "^3.15.2"
+python-dotenv = "^1.0.1"
+celery = "^5.4.0"
+redis = "^5.2.0"
+flake8 = "^7.1.1"
+pillow = "^11.0.0"
+black = "^24.10.0"
+django-phonenumber-field = "^8.0.0"
+rest-framework-simplejwt = "^0.0.2"
+djangorestframework-simplejwt = "^5.3.1"
+django-celery-beat = "^2.7.0"
+drf-yasg = "^1.21.8"
+setuptools = "^75.5.0"
+phonenumbers = "^8.13.50"
+python-telegram-bot = "^21.7"
+coverage = "^7.6.7"
+django-cors-headers = "^4.6.0"
+requests = "^2.32.3"
+pytest = "^8.3.3"
+psycopg = "^3.2.3"
+automium-web = "^0.1.1"
 
 
 [build-system]
